--- a/index.html
+++ b/index.html
@@ -11,9 +11,50 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:500&display=swap&subset=cyrillic-ext"
+        rel="stylesheet"
+  >
 </head>
 <body>
+  <header class="header">
+    <div class="header_logo">
+      <a href="#">
+          <img src="images/logo.png"
+            alt="Moyo logotype"
+            width="40"
+            height="40"
+          >
+      </a>
+    </div>
+    <nav class="header-nav">
+      <ul class="header_navigation-list">
+        <li class="header_navigation-item header_navigation-item--active">
+          <a href="#" class="is-active">Apple</a>
+        </li>
+        <li class="header_navigation-item">
+          <a href="#">Samsung</a>
+        </li>
+        <li class="header_navigation-item">
+          <a href="#">Смарфоны и телефоны  </a>
+        </li>
+        <li data-qa="hover" class="header_navigation-item">
+          <a href="#">Ноутбуки и компьютеры</a>
+        </li>
+        <li class="header_navigation-item">
+          <a href="#">Гаджеты</a>
+        </li>
+        <li class="header_navigation-item">
+          <a href="#">Планшеты</a>
+        </li>
+        <li class="header_navigation-item">
+            <a href="#">Фото</a>
+        </li>
+        <li class="header_navigation-item">
+            <a href="#">Видео</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-<script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
