BEM added without SASS

--- a/index.html
+++ b/index.html
@@ -17,40 +17,39 @@
 </head>
 <body>
   <header class="header">
-    <div class="header_logo">
+    <div class="header__logo">
       <a href="#">
-          <img src="images/logo.png"
-            alt="Moyo logotype"
-            width="40"
-            height="40"
-          >
+        <img
+          src="images/logo.png"
+          alt="Moyo logotype"
+        >
       </a>
     </div>
-    <nav class="header-nav">
-      <ul class="header_navigation-list">
-        <li class="header_navigation-item header_navigation-item--active">
+    <nav class="header__navigation">
+      <ul class="header__navigation-list">
+        <li class="header__navigation-item header__navigation-item--active">
           <a href="#" class="is-active">Apple</a>
         </li>
-        <li class="header_navigation-item">
+        <li class="header__navigation-item">
           <a href="#">Samsung</a>
         </li>
-        <li class="header_navigation-item">
+        <li class="header__navigation-item">
           <a href="#">Смарфоны и телефоны  </a>
         </li>
-        <li data-qa="hover" class="header_navigation-item">
+        <li data-qa="hover" class="header__navigation-item">
           <a href="#">Ноутбуки и компьютеры</a>
         </li>
-        <li class="header_navigation-item">
+        <li class="header__navigation-item">
           <a href="#">Гаджеты</a>
         </li>
-        <li class="header_navigation-item">
+        <li class="header__navigation-item">
           <a href="#">Планшеты</a>
         </li>
-        <li class="header_navigation-item">
-            <a href="#">Фото</a>
+        <li class="header__navigation-item">
+          <a href="#">Фото</a>
         </li>
-        <li class="header_navigation-item">
-            <a href="#">Видео</a>
+        <li class="header__navigation-item">
+          <a href="#">Видео</a>
         </li>
       </ul>
     </nav>
